force-app/main/default/objects/Account/fields/CentroResidenciaActual__c.field-meta.xml
<CustomField>
    <fullName>CentroResidenciaActual__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo de tipo búsqueda para conocer el centro/residencia actual del contacto residente</description>
    <label>Centro/ Residencia Actual Residente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Centros/Residencias Actuales</relationshipLabel>
    <relationshipName>CentrosResidenciasActuales</relationshipName>
    <type>Lookup</type>
</CustomField>