force-app/main/default/objects/Account/fields/Centros__c.field-meta.xml
<CustomField>
    <fullName>Centros__c</fullName>
    <description>Centros en las que está relacionado el prescriptor</description>
    <label>Centros</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Residencias</valueSetName>
    </valueSet>
</CustomField>