force-app/main/default/objects/Account/fields/CodigoCentroSAP__c.field-meta.xml
<CustomField>
    <fullName>CodigoCentroSAP__c</fullName>
    <description>Identificador único del centro en SAP</description>
    <externalId>true</externalId>
    <label>Código del centro</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>