force-app/main/default/objects/Account/fields/Debilidades__c.field-meta.xml
<CustomField>
    <fullName>Debilidades__c</fullName>
    <description>Debilidades del competidor</description>
    <label>Debilidades</label>
    <length>255</length>
    <type>Text</type>
</CustomField>