force-app/main/default/objects/Account/fields/Distrito__c.field-meta.xml
<CustomField>
    <fullName>Distrito__c</fullName>
    <description>Distrito donde se ubica la Cuenta del prescriptor</description>
    <label>Distrito</label>
    <length>255</length>
    <type>Text</type>
</CustomField>