force-app/main/default/objects/Account/fields/FechaPrimeraVisita__c.field-meta.xml
<CustomField>
    <fullName>FechaPrimeraVisita__c</fullName>
    <description>Campo de tipo fecha para mostrar la primera visita vinculada con la cuenta</description>
    <label>Fecha primera visita</label>
    <type>Date</type>
</CustomField>