force-app/main/default/objects/Account/fields/Fortalezas__c.field-meta.xml
<CustomField>
    <fullName>Fortalezas__c</fullName>
    <description>Fortalezas del competidor</description>
    <label>Fortalezas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>