force-app/main/default/objects/Account/fields/IconoMysteryClient__c.field-meta.xml
<CustomField>
    <fullName>IconoMysteryClient__c</fullName>
    <description>Si el campo &quot;Mystery Client&quot; esta relleno muestra un check, si no muestra una cruz</description>
    <formula>IF( MysteryClient__c ,IMAGE(&apos;/resource/IconosIndicadorContacto/Alerta.jpg&apos;, &quot;&quot;, 30, 30) , IMAGE(&apos;/resource/IconosIndicadorContacto/OK.jpg&apos;,&quot;&quot;, 30, 30) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mystery Client</label>
    <type>Text</type>
</CustomField>