force-app/main/default/objects/Account/fields/IdExternoSAP__c.field-meta.xml
<CustomField>
    <fullName>IdExternoSAP__c</fullName>
    <description>Identificador externo de SAP</description>
    <externalId>true</externalId>
    <label>Identificador de SAP</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>