force-app/main/default/objects/Account/fields/MysteryClient__c.field-meta.xml
<CustomField>
    <fullName>MysteryClient__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Si es un cliente de la competencia que ha llamado para hacer un estudio de mercado</description>
    <inlineHelpText>Solo se cumplimentará desde Dirección Comercial</inlineHelpText>
    <label>Mystery Client</label>
    <type>Checkbox</type>
</CustomField>