force-app/main/default/objects/Account/fields/OCPLPrivadaAbril__c.field-meta.xml
<CustomField>
    <fullName>OCPLPrivadaAbril__c</fullName>
    <description>Ocupación planificada privada Abril</description>
    <label>OCPL Privada Abril</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>