force-app/main/default/objects/Account/fields/OCPLPrivadaAgosto__c.field-meta.xml
<CustomField>
    <fullName>OCPLPrivadaAgosto__c</fullName>
    <description>Ocupación planificada privada Agosto</description>
    <label>OCPL Privada Agosto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>