force-app/main/default/objects/Account/fields/OCPLPrivadaDiciembre__c.field-meta.xml
<CustomField>
    <fullName>OCPLPrivadaDiciembre__c</fullName>
    <description>Ocupación planificada privada Diciembre</description>
    <label>OCPL Privada Diciembre</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>