force-app/main/default/objects/Account/fields/OCPLPrivadaEnero__c.field-meta.xml
<CustomField>
    <fullName>OCPLPrivadaEnero__c</fullName>
    <description>Ocupación planificada privada Enero</description>
    <label>OCPL Privada Enero</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>