force-app/main/default/objects/Account/fields/OCPLPrivadaFebrero__c.field-meta.xml
<CustomField>
    <fullName>OCPLPrivadaFebrero__c</fullName>
    <description>Ocupación planificada privada Febrero</description>
    <label>OCPL Privada Febrero</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>