force-app/main/default/objects/Account/fields/OCPLPrivadaJulio__c.field-meta.xml
<CustomField>
    <fullName>OCPLPrivadaJulio__c</fullName>
    <description>Ocupación planificada privada Julio</description>
    <label>OCPL Privada Julio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>