force-app/main/default/objects/Account/fields/OCPLPrivadaJunio__c.field-meta.xml
<CustomField>
    <fullName>OCPLPrivadaJunio__c</fullName>
    <description>Ocupación planificada privada Junio</description>
    <label>OCPL Privada Junio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>