force-app/main/default/objects/Account/fields/OCPLPrivadaMarzo__c.field-meta.xml
<CustomField>
    <fullName>OCPLPrivadaMarzo__c</fullName>
    <description>Ocupación planificada privada Marzo</description>
    <label>OCPL Privada Marzo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>