force-app/main/default/objects/Account/fields/OCPLPrivadaMayo__c.field-meta.xml
<CustomField>
    <fullName>OCPLPrivadaMayo__c</fullName>
    <description>Ocupación planificada privada Mayo</description>
    <label>OCPL Privada Mayo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>