force-app/main/default/objects/Account/fields/OCPLPrivadaNoviembre__c.field-meta.xml
<CustomField>
    <fullName>OCPLPrivadaNoviembre__c</fullName>
    <description>Ocupación planificada privada Noviembre</description>
    <label>OCPL Privada Noviembre</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>