force-app/main/default/objects/Account/fields/OCPLPrivadaOctubre__c.field-meta.xml
<CustomField>
    <fullName>OCPLPrivadaOctubre__c</fullName>
    <description>Ocupación planificada privada Octubre</description>
    <label>OCPL Privada Octubre</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>