force-app/main/default/objects/Account/fields/OCPLPrivadaSeptiembre__c.field-meta.xml
<CustomField>
    <fullName>OCPLPrivadaSeptiembre__c</fullName>
    <description>Ocupación planificada privada Septiembre</description>
    <label>OCPL Privada Septiembre</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>