force-app/main/default/objects/Account/fields/OCPLPublicaAbril__c.field-meta.xml
<CustomField>
    <fullName>OCPLPublicaAbril__c</fullName>
    <description>Ocupación planificada pública Abril</description>
    <label>OCPL Pública Abril</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>