force-app/main/default/objects/Account/fields/OCPLPublicaAgosto__c.field-meta.xml
<CustomField>
    <fullName>OCPLPublicaAgosto__c</fullName>
    <description>Ocupación planificada pública Agosto</description>
    <label>OCPL Pública Agosto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>