force-app/main/default/objects/Account/fields/OCPLPublicaDiciembre__c.field-meta.xml
<CustomField>
    <fullName>OCPLPublicaDiciembre__c</fullName>
    <description>Ocupación planificada pública Diciembre</description>
    <label>OCPL Pública Diciembre</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>