force-app/main/default/objects/Account/fields/OCPLPublicaEnero__c.field-meta.xml
<CustomField>
    <fullName>OCPLPublicaEnero__c</fullName>
    <description>Ocupación planificada pública Enero</description>
    <label>OCPL Pública Enero</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>