force-app/main/default/objects/Account/fields/OCPLPublicaFebrero__c.field-meta.xml
<CustomField>
    <fullName>OCPLPublicaFebrero__c</fullName>
    <description>Ocupación planificada pública Febero</description>
    <label>OCPL Pública Febrero</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>