force-app/main/default/objects/Account/fields/OCPLPublicaJulio__c.field-meta.xml
<CustomField>
    <fullName>OCPLPublicaJulio__c</fullName>
    <description>Ocupación planificada pública Julio</description>
    <label>OCPL Pública Julio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>