force-app/main/default/objects/Account/fields/OCPLPublicaJunio__c.field-meta.xml
<CustomField>
    <fullName>OCPLPublicaJunio__c</fullName>
    <description>Ocupación planificada pública Junio</description>
    <label>OCPL Pública Junio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>