force-app/main/default/objects/Account/fields/OCPLPublicaMarzo__c.field-meta.xml
<CustomField>
    <fullName>OCPLPublicaMarzo__c</fullName>
    <description>Ocupación planificada pública Marzo</description>
    <label>OCPL Pública Marzo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>