force-app/main/default/objects/Account/fields/OCPLPublicaMayo__c.field-meta.xml
<CustomField>
    <fullName>OCPLPublicaMayo__c</fullName>
    <description>Ocupación planificada pública Mayo</description>
    <label>OCPL Pública Mayo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>