force-app/main/default/objects/Account/fields/OCPLPublicaNoviembre__c.field-meta.xml
<CustomField>
    <fullName>OCPLPublicaNoviembre__c</fullName>
    <description>Ocupación planificada pública Noviembre</description>
    <label>OCPL Pública Noviembre</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>