force-app/main/default/objects/Account/fields/OCPLPublicaOctubre__c.field-meta.xml
<CustomField>
    <fullName>OCPLPublicaOctubre__c</fullName>
    <description>Ocupación planificada pública Octubre</description>
    <label>OCPL Pública Octubre</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>