force-app/main/default/objects/Account/fields/OCPLPublicaSeptiembre__c.field-meta.xml
<CustomField>
    <fullName>OCPLPublicaSeptiembre__c</fullName>
    <description>Ocupación planificada pública Septiembre</description>
    <label>OCPL Pública Septiembre</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>