force-app/main/default/objects/Account/fields/OcupacionPlanificadaPrivada__c.field-meta.xml
<CustomField>
    <fullName>OcupacionPlanificadaPrivada__c</fullName>
    <description>Planificación de ingresos en plaza privada para este centro</description>
    <label>Ocupación planificada privada</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>