force-app/main/default/objects/Account/fields/OcupacionPlanificadaPublica__c.field-meta.xml
<CustomField>
    <fullName>OcupacionPlanificadaPublica__c</fullName>
    <description>Planificación de ingresos en plaza pública para este centro</description>
    <label>Ocupación planificada pública</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>