force-app/main/default/objects/Account/fields/OtroTelefono__c.field-meta.xml
<CustomField>
    <fullName>OtroTelefono__c</fullName>
    <description>Otro teléfono de la Cuenta</description>
    <inlineHelpText>Para teléfono nacional, introduce 9 dígitos sin espacios o el &quot;+34&quot; y 9 dígitos sin espacios.
Para teléfono internacional, introduce el &quot;+&quot; seguido del prefijo del país, máximo 15 dígitos sin espacios.</inlineHelpText>
    <label>Otro teléfono</label>
    <type>Phone</type>
</CustomField>