force-app/main/default/objects/Account/fields/PlazasCentroDia__c.field-meta.xml
<CustomField>
    <fullName>PlazasCentroDia__c</fullName>
    <description>Plazas totales de centro de día</description>
    <label>Plazas (CD)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>