force-app/main/default/objects/Account/fields/PlazasPrivadasCentroDia__c.field-meta.xml
<CustomField>
    <fullName>PlazasPrivadasCentroDia__c</fullName>
    <description>Plazas privadas de centro de día</description>
    <label>Plazas privadas (CD)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>