force-app/main/default/objects/Account/fields/PlazasPrivadasResidencia__c.field-meta.xml
<CustomField>
    <fullName>PlazasPrivadasResidencia__c</fullName>
    <description>Plazas privadas de residencia</description>
    <label>Plazas privadas (RP)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>