force-app/main/default/objects/Account/fields/PlazasPublicasCentroDia__c.field-meta.xml
<CustomField>
    <fullName>PlazasPublicasCentroDia__c</fullName>
    <description>Plazas públicas de centro de día</description>
    <label>Plazas públicas (CD)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>