force-app/main/default/objects/Account/fields/PlazasPublicasCentroDiaOcupadas__c.field-meta.xml
<CustomField>
    <fullName>PlazasPublicasCentroDiaOcupadas__c</fullName>
    <description>Sumatorio de las Plazas públicas de centro de día ocupadas</description>
    <label>Ocupadas públicas (CD)</label>
    <summaryFilterItems>
        <field>Plaza__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Centro de día</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Plaza__c.TipoPlaza__c</field>
        <operation>equals</operation>
        <value>Pública</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Plaza__c.PlazaOcupada__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Plaza__c.Cuenta__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>