force-app/main/default/objects/Account/fields/PlazasPublicasResidencia__c.field-meta.xml
<CustomField>
    <fullName>PlazasPublicasResidencia__c</fullName>
    <description>Plazas públicas de residencia</description>
    <label>Plazas públicas (RP)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>