force-app/main/default/objects/Account/fields/PlazasPublicasResidenciaOcupadas__c.field-meta.xml
<CustomField>
    <fullName>PlazasPublicasResidenciaOcupadas__c</fullName>
    <description>Sumatorio de las Plazas públicas de residencia ocupadas</description>
    <label>Ocupadas públicas (RP)</label>
    <summaryFilterItems>
        <field>Plaza__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Residencia</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Plaza__c.PlazaOcupada__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Plaza__c.TipoPlaza__c</field>
        <operation>equals</operation>
        <value>Pública</value>
    </summaryFilterItems>
    <summaryForeignKey>Plaza__c.Cuenta__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>