force-app/main/default/objects/Account/fields/Productos__c.field-meta.xml
<CustomField>
    <fullName>Productos__c</fullName>
    <description>Productos o servicios que tiene el competidor</description>
    <label>Productos</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Residencia</fullName>
            </value>
            <value>
                <fullName>Centro de día</fullName>
            </value>
            <value>
                <fullName>Apartamentos</fullName>
            </value>
            <value>
                <fullName>Respiro</fullName>
            </value>
            <value>
                <fullName>Pisos tutelados</fullName>
            </value>
            <value>
                <fullName>SAD</fullName>
            </value>
            <value>
                <fullName>TAD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>