force-app/main/default/objects/Account/fields/QuienAtiende__c.field-meta.xml
<CustomField>
    <fullName>QuienAtiende__c</fullName>
    <description>Nombre y apellidos de la persona del competidor</description>
    <label>Quien atiende</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Trabajador social</fullName>
            </value>
            <value>
                <fullName>Dirección</fullName>
            </value>
            <value>
                <fullName>Recepción</fullName>
            </value>
            <value>
                <fullName>Call Center</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>