force-app/main/default/objects/Account/fields/Seguimiento__c.field-meta.xml
<CustomField>
    <fullName>Seguimiento__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Se ha de realizar un seguimiento del competidor</description>
    <label>Seguimiento</label>
    <type>Checkbox</type>
</CustomField>