force-app/main/default/objects/Account/fields/Servicios__c.field-meta.xml
<CustomField>
    <fullName>Servicios__c</fullName>
    <description>Lista de servicios de competidores</description>
    <label>Servicios</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fisioterapia</fullName>
            </value>
            <value>
                <fullName>Trabajo Social</fullName>
            </value>
            <value>
                <fullName>Logopedia</fullName>
            </value>
            <value>
                <fullName>Terapia ocupacional</fullName>
            </value>
            <value>
                <fullName>Psicología</fullName>
            </value>
            <value>
                <fullName>Medicina</fullName>
            </value>
            <value>
                <fullName>Enfermería</fullName>
            </value>
            <value>
                <fullName>Peluquería</fullName>
            </value>
            <value>
                <fullName>Podología</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>