force-app/main/default/objects/Account/fields/Tarifas__c.field-meta.xml
<CustomField>
    <fullName>Tarifas__c</fullName>
    <description>Tarifas que aplica el competidor</description>
    <label>Otras tarifas relevantes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>