force-app/main/default/objects/Account/fields/TarifasPromocion__c.field-meta.xml
<CustomField>
    <fullName>TarifasPromocion__c</fullName>
    <description>Tarifas con promoción</description>
    <label>Tarifas con promoción</label>
    <length>255</length>
    <type>Text</type>
</CustomField>