force-app/main/default/objects/Account/fields/TarifasSegunGradoDependencia__c.field-meta.xml
<CustomField>
    <fullName>TarifasSegunGradoDependencia__c</fullName>
    <description>Tarifas según grado de dependencia (Autónomo, semiasistido, asistido)</description>
    <inlineHelpText>Tarifas según grado de dependencia (Autónomo, semiasistido, asistido)</inlineHelpText>
    <label>Tarifas según grado dependencia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>