force-app/main/default/objects/Account/fields/TarifasTipoHabitacion__c.field-meta.xml
<CustomField>
    <fullName>TarifasTipoHabitacion__c</fullName>
    <description>Tarifas según tipo de habitación (compartida, individual, ...).</description>
    <inlineHelpText>Tarifas según tipo de habitación (compartida, individual, ...).</inlineHelpText>
    <label>Tarifas según tipo de habitación</label>
    <length>255</length>
    <type>Text</type>
</CustomField>