force-app/main/default/objects/Account/fields/TasaOcupacionCentroDia__c.field-meta.xml
<CustomField>
    <fullName>TasaOcupacionCentroDia__c</fullName>
    <description>Porcentaje de ocupación de las plazas totales de centro de día</description>
    <formula>(PlazasPublicasCentroDiaOcupadas__c + PlazasPrivadasCentroDiaOcupadas__c) / 7 /   TotalPlazasCD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Ocupación CD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>