force-app/main/default/objects/Account/fields/TasaOcupacionPrivadaCentroDia__c.field-meta.xml
<CustomField>
    <fullName>TasaOcupacionPrivadaCentroDia__c</fullName>
    <description>Porcentaje de ocupación de las plazas privadas de centro de día</description>
    <formula>PlazasPrivadasCentroDiaOcupadas__c / 7 / TotalPlazasPrivadaCD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Ocupación privada CD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>