force-app/main/default/objects/Account/fields/TasaOcupacionPrivadaResidencia__c.field-meta.xml
<CustomField>
    <fullName>TasaOcupacionPrivadaResidencia__c</fullName>
    <description>Porcentaje de ocupación de las plazas privadas de residencia</description>
    <formula>TotalPlazasPrivadaRP__c   /   PlazasPrivadasResidencia__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Ocupación privada RP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>