force-app/main/default/objects/Account/fields/TasaOcupacionPublicaCentroDia__c.field-meta.xml
<CustomField>
    <fullName>TasaOcupacionPublicaCentroDia__c</fullName>
    <description>Porcentaje de ocupación de las plazas públicas de centro de día</description>
    <formula>PlazasPublicasCentroDiaOcupadas__c  / 7 /  TotalPlazasPublicasCD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Ocupación pública CD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>