force-app/main/default/objects/Account/fields/TasaOcupacionPublicaResidencia__c.field-meta.xml
<CustomField>
    <fullName>TasaOcupacionPublicaResidencia__c</fullName>
    <description>Porcentaje de ocupación de las plazas públicas de residencia</description>
    <formula>PlazasPublicasResidenciaOcupadas__c /   TotalPlazasPblicasRP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Ocupación pública RP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>