force-app/main/default/objects/Account/fields/TasaOcupacionResidencia__c.field-meta.xml
<CustomField>
    <fullName>TasaOcupacionResidencia__c</fullName>
    <description>Porcentaje de ocupación de las plazas totales de residencia</description>
    <formula>(PlazasPublicasResidenciaOcupadas__c +  PlazasPrivadasResidenciaOcupadas__c ) /  TotalPlazasRP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Ocupación RP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>