force-app/main/default/objects/Account/fields/TiempoRespuesta__c.field-meta.xml
<CustomField>
    <fullName>TiempoRespuesta__c</fullName>
    <description>Tiempo en el que responde el competidor</description>
    <label>Tiempo respuesta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inmediato</fullName>
            </value>
            <value>
                <fullName>Mismo día</fullName>
            </value>
            <value>
                <fullName>Otro día</fullName>
            </value>
            <value>
                <fullName>Misma semana</fullName>
            </value>
            <value>
                <fullName>No contactan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>