force-app/main/default/objects/Account/fields/TotalOcupacionPlanificada__c.field-meta.xml
<CustomField>
    <fullName>TotalOcupacionPlanificada__c</fullName>
    <description>Planificación de ingresos para este centro</description>
    <label>Total Ocupación Planificada</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>