force-app/main/default/objects/Account/fields/TotalPlazasCD__c.field-meta.xml
<CustomField>
    <fullName>TotalPlazasCD__c</fullName>
    <description>Total plazas CD</description>
    <label>Total plazas CD</label>
    <summaryFilterItems>
        <field>Plaza__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Centro de día</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Plaza__c.DiaSemana__c</field>
        <operation>equals</operation>
        <value>Lunes</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Plaza__c.PlazaInhabilitada__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Plaza__c.Cuenta__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>