force-app/main/default/objects/Account/fields/TotalPlazasFantasmaRP__c.field-meta.xml
<CustomField>
    <fullName>TotalPlazasFantasmaRP__c</fullName>
    <description>Total de plazas fantasma</description>
    <inlineHelpText>Total de plazas fantasma</inlineHelpText>
    <label>Total plazas fantasma RP</label>
    <summaryFilterItems>
        <field>Plaza__c.EsFantasma__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Plaza__c.PlazaInhabilitada__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Plaza__c.Cuenta__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>