force-app/main/default/objects/Account/fields/TotalPlazasPblicasRP__c.field-meta.xml
<CustomField>
    <fullName>TotalPlazasPblicasRP__c</fullName>
    <label>Total plazas públicas RP</label>
    <summaryFilterItems>
        <field>Plaza__c.TipoPlaza__c</field>
        <operation>equals</operation>
        <value>Pública</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Plaza__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Residencia</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Plaza__c.EsFantasma__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Plaza__c.PlazaInhabilitada__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Plaza__c.Cuenta__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>