force-app/main/default/objects/Account/fields/TotalPlazasPrivadaRP__c.field-meta.xml
<CustomField>
    <fullName>TotalPlazasPrivadaRP__c</fullName>
    <label>Total plazas privada RP</label>
    <summaryFilterItems>
        <field>Plaza__c.TipoPlaza__c</field>
        <operation>equals</operation>
        <value>Privada</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Plaza__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Residencia</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Plaza__c.EsFantasma__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Plaza__c.PlazaInhabilitada__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Plaza__c.Cuenta__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>