force-app/main/default/objects/Account/fields/TotalPlazasPublicasCD__c.field-meta.xml
<CustomField>
    <fullName>TotalPlazasPublicasCD__c</fullName>
    <description>Total plazas públicas CD</description>
    <label>Total plazas públicas CD</label>
    <summaryFilterItems>
        <field>Plaza__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Centro de día</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Plaza__c.TipoPlaza__c</field>
        <operation>equals</operation>
        <value>Pública</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Plaza__c.DiaSemana__c</field>
        <operation>equals</operation>
        <value>Lunes</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Plaza__c.PlazaInhabilitada__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Plaza__c.Cuenta__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>